[package]
name = "cocomo-core"
version = "0.0.1"
edition = "2024"
authors = ["Michael Amrhein <michael@adrhinum.de>"]
description = "COmpare, COpy & MOve directories and files [core library]."
readme = "../README.md"
homepage = "https://github.com/mamrhein/cocomo"
repository = "https://github.com/mamrhein/cocomo"
documentation = "https://docs.rs/cocomo-core/"
license-file = "../LICENSE.TXT"
keywords = ["directory", "file", "compare", "copy", "move"]
categories = ["command-line-utilities", "filesystem"]

[dependencies]
