[package]
name = "cocomo-tui"
version = "0.0.1"
edition = "2024"
authors = ["Michael Amrhein <michael@adrhinum.de>"]
description = "CLI-App: COmpare, COpy & MOve directories and files."
readme = "../README.md"
homepage = "https://github.com/mamrhein/cocomo"
repository = "https://github.com/mamrhein/cocomo"
documentation = "https://docs.rs/cocomo-tui/"
license-file = "../LICENSE.TXT"
keywords = ["directory", "file", "compare", "copy", "move"]
categories = ["command-line-utilities", "filesystem"]

[dependencies]
clap = { version = "^4.5", features = ["derive", "unicode", "wrap_help"] }
cocomo-core = { version = "0.0.1", path = "../cocomo-core" }
crossterm = "^0.25"
tui = "^0.19"

[[bin]]
name = "cocomo"
path = "src/main.rs"
