[package]
name = "cocomo-tui"
version = "0.0.1"
edition = "2024"
authors = ["Michael Amrhein <michael@adrhinum.de>"]
description = "CLI-App: COmpare, COpy & MOve directories and files."
readme = "../README.md"
homepage = "https://github.com/mamrhein/cocomo"
repository = "https://github.com/mamrhein/cocomo"
documentation = "https://docs.rs/cocomo-tui/"
license-file = "../LICENSE.TXT"
keywords = ["directory", "file", "compare", "copy", "move"]
categories = ["command-line-utilities", "filesystem"]

[dependencies]
crossterm = { version = "0.29.0", features = ["event-stream"] }
futures = "0.3.31"
ratatui = "0.30.0"
tokio = { version = "1.40.0", features = ["full"] }
color-eyre = { version = "0.6", default-features = false }
clap = { version = "4.5.55", features = ["derive", "unicode", "wrap_help"] }
cocomo-core = { version = "0.0.1", path = "../cocomo-core" }

[[bin]]
name = "cocomo"
path = "src/main.rs"
